# flagfall

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  board.cpp  board.h  board.hpp  entry.cpp  piece.cpp  piece.hpp  pieces.cpp  pieces.h  pieces.hpp
src/: board.cpp  board.h  board.h.gch  king.cpp  king.h  pawn.cpp  pawn.h  piece.cpp  piece.h  queen.cpp  queen.h
tests/: CMakeLists.txt  kingtests.cpp  pawntests.cpp  queentests.cpp
